--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
 <html lang="ko">
+<head>
+	<meta charset="UTF-8">
+	<title>Andrew Lyman | HOME</title>
 
-	<head>
-		<meta charset="UTF-8"/>
-    	<title>BLOG TEST</title>
-	</head>
+	<link href="css/common.css" rel="stylesheet" type="text/css"/>
+	<link href="css/main.css" rel="stylesheet" type="text/css"/>
+</head>
 
-	<body>
-		<h1>블로그 테스트</h1>
-	</body>
+<body>
+	<div id="bg_img"></div>
+
+	<div id="layout">   
+		<header>
+			<h1 id="logo"><a href="#">Andrew Lyman</a></h1>
+
+			<nav>
+				<ul id="nav_menu">
+					<li><a href="#">About</a></li>
+					<li><a href="#">Works</a></li>
+					<li><a href="#">Story</a></li>
+				</ul>
+			</nav>
+		</header> 
+
+		<div id="title_wrap">
+			<h2><img src="img/big_title.png" alt="text_Andrew_Lyman"/></h2>
+
+			<div id="text_wrap">
+				<div id="text">
+					<span>01 / 03</span>
+					<p><a href="#">Chris</br>and Sarah</a></p>
+				</div>
+
+				<div id="arr_box">
+					<ul>
+						<li id="arr_left"><a href="#">Left Arrow</a></li>
+						<li id="arr_right"><a href="#">Right Arrow</a></li>
+					</ul>
+					
+				</div>
+			</div>
+
+			<div id="slide_icon">
+				<ul>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+				</ul>
+			</div>
+		</div>	<!-- title_wrap -->
+
+		
+
+		<div id="bottom">
+			<div id="site">
+				<ul>
+					<li><a href="http://www.andrewlymanart.com/" target="blank">Website</a></li>
+					<li><a href="http://andrewlymanblog.tumblr.com/" target="blank">Tumblr</a></li>
+				</ul>
+			</div>
+
+			<div id="sound">
+				<ul>
+					<li>Sound</li>
+					<li id="sound_tog"><a href="#">OFF</a></li>
+				</ul>
+			</div>
+		</div>	<!-- bottom -->
+
+	</div>	<!-- layout -->
+
+	<script src="js/script.js" rel="stylesheet" type="text/javascript"/></script>
+</body>
 
 </html>
