--- a/cast.html
+++ b/cast.html
@@ -2,12 +2,12 @@
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<title>EQUALS</title>
+	<title>EQUALS | Cast</title>
 
 	<link rel="shortcut icon" type="image/x-icon" href="img/favi.ico" />
 
 	<link href="css/common.css" rel="stylesheet" type="text/css"/>
-	<link href="css/main.css" rel="stylesheet" type="text/css"/>
+	<link href="css/cast.css" rel="stylesheet" type="text/css"/>
 </head>
 
 
@@ -29,18 +29,18 @@
 					</div>
 
 					<ul id="nav_menu">
-						<li class="menu_title"><a href="cast.html">CAST</a>
+						<li><a href="cast.html">CAST</a>
 							<ul class="menu_sub">
-								<li><a href="cast_nic.html">KRISTEN STEWART</a></li>
-								<li><a href="cast_kris.html">NICHOLAS HOULT</a></li>
+								<li><a href="cast_kris.html">KRISTEN STEWART</a></li>
+								<li><a href="cast_nic.html">NICHOLAS HOULT</a></li>
 							</ul>
 						</li>
-						<li class="menu_title"><a href="story.html">STORY</a>
+						<li><a href="story.html">STORY</a>
 							<ul class="menu_sub">
 								<li><a href="story_sub.html">SYNOPSIS<br>&amp; CREW</a></li>
 							</ul>
 						</li>
-						<li class="menu_title"><a href="high.html">HIGHLIGHT</a>
+						<li><a href="high.html">HIGHLIGHT</a>
 							<ul class="menu_sub">
 								<li><a href="high_sub.html">GALLERY</a></li>
 								<li><a href="trailer.html">TRAILER</a></li>
@@ -59,8 +59,20 @@
 
 
 		<div id="title_box">
-			<h2 id="title"><img src="img/main_title.png" alt="EQUALS Title Text"></h2>
-			<h3 id="sub_title"><img src="img/main_sub_title.png" alt="Find Your Equals"></h3>
+			<ul id="cast_btn">
+				<li id="kris">
+					<a href="cast_kirs.html">
+						<h2>KRISTEN<br>STEWART</h2>
+						<h3>Nia</h3>
+					</a>
+				</li>
+				<li id="nic">
+					<a href="cast_nid.html">
+						<h2>NICHOLAS<br>HOULT</h2>
+						<h3>Silas</h3>
+					</a>
+				</li>
+			</ul>
 		</div>
 
 
