--- a/high.html
+++ b/high.html
@@ -2,12 +2,12 @@
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<title>EQUALS</title>
+	<title>EQUALS | Highlight</title>
 
 	<link rel="shortcut icon" type="image/x-icon" href="img/favi.ico" />
 
 	<link href="css/common.css" rel="stylesheet" type="text/css"/>
-	<link href="css/main.css" rel="stylesheet" type="text/css"/>
+	<link href="css/high.css" rel="stylesheet" type="text/css"/>
 </head>
 
 
@@ -31,8 +31,8 @@
 					<ul id="nav_menu">
 						<li class="menu_title"><a href="cast.html">CAST</a>
 							<ul class="menu_sub">
-								<li><a href="cast_nic.html">KRISTEN STEWART</a></li>
-								<li><a href="cast_kris.html">NICHOLAS HOULT</a></li>
+								<li><a href="cast_kris.html">KRISTEN STEWART</a></li>
+								<li><a href="cast_nic.html">NICHOLAS HOULT</a></li>
 							</ul>
 						</li>
 						<li class="menu_title"><a href="story.html">STORY</a>
@@ -50,8 +50,8 @@
 				</nav>
 
 				<div id="trailer_box">
-					<span id="t_text"><a href="#">WATCH THE <b>TRAILER</b></a></span>
-					<div id="t_circle"><a href="#"></a></div>
+					<span id="t_text"><a href="#" target="_blank">WATCH THE <b>TRAILER</b></a></span>
+					<div id="t_circle"><a href="#" target="_blank"></a></div>
 				</div>
 			</header>
 		</div>
@@ -59,8 +59,8 @@
 
 
 		<div id="title_box">
-			<h2 id="title"><img src="img/main_title.png" alt="EQUALS Title Text"></h2>
-			<h3 id="sub_title"><img src="img/main_sub_title.png" alt="Find Your Equals"></h3>
+			<h2><a href="#">GALLEY</a></h2>
+			<h3>“ just remember what this feels like. ”</h3>
 		</div>
 
 
