--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>EQUALS</title>
 
 	<link rel="shortcut icon" type="image/x-icon" href="img/favi.ico" />
+	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700" rel="stylesheet">
 
 	<link href="css/common.css" rel="stylesheet" type="text/css"/>
 	<link href="css/main.css" rel="stylesheet" type="text/css"/>
@@ -80,8 +81,8 @@
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js'></script>
 	
-	<script src="js/script.js"></script>
-	<script src="js/main.js"></script>
+<!-- 	<script src="js/script.js"></script>
+	<script src="js/main.js"></script> -->
 </body>
 
 </html>
