--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>PORTFOLIO-Web Site</title>
+<title>PORTFOLIO-Web</title>
 
 <!--[if lt IE 9]>
 <script src="http://html5shiv-printshiv.googlecode.com/svn/trunk/html5shiv-printshiv.js"></script>
