--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div>
 		<ul>
 			<li>
-				<a href="http://ucmpltme.github.io">
+				<a href="doc/designer/index.html">
 					Y.DAHYE Designer
 				</a>
 			</li>
