--- a/index.html
+++ b/index.html
@@ -18,32 +18,32 @@
 	<div>
 		<ul>
 			<li>
-				<a href="doc/designer/index.html">
+				<a href="doc/designer/index.html" target="blank">
 					Y.DAHYE Designer
 				</a>
 			</li>
 			<li>
-				<a href="doc/clay/index.html">
+				<a href="doc/clay/index.html" target="blank">
 					Colourful Play, CLAY!
 				</a>
 			</li>
 			<li>
-				<a href="doc/moon/index.html">
+				<a href="doc/moon/index.html" target="blank">
 					D, Half Moon
 				</a>
 			</li>
 			<li>
-				<a href="doc/patagonia/index.html">
+				<a href="doc/patagonia/index.html" target="blank">
 					Inside Patagonia
 				</a>
 			</li>
 			<li>
-				<a href="doc/equals/index.html">
+				<a href="doc/equals/index.html" target="blank">
 					Find Your Equals
 				</a>
 			</li>
 			<li>
-				<a href="doc/ace/index.html">
+				<a href="doc/ace/index.html" target="blank">
 					New Ace
 				</a>
 			</li>
